# lazyaccounting

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml
lazybeans/converters/: converter.py
lazybeans/data/: beancount_transaction.py  csv_camt.py  csv_kkb.py
lazybeans/util/: logging.py  money.py
v1/: fixtures_test.go  import.go  import_test.go  main.go  transaction.go  v1
