[tool.poetry]
name = "lazybeans"
version = "0.1.0"
description = "Lazybeans provides cli utilities for the amazing plaintext accounting tool Beancount."
authors = ["Stefan Mesken <kappadistributive@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
